<resources>
    <string name="app_name">Chat App</string>
    <string name="max_players">Max Players:</string>
    <string name="create">Create</string>
    <string name="room_name">Room Name:</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="ready">Ready</string>
    <string name="nickName">NickName</string>
    <string name="loadingPlayer">waiting for players…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_room">ChatRoom</string>
    <string name="send">send</string>
    <string name="enter">enter</string>
</resources>
