<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_room_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.quizmaniacs.RoomMenu">

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roomMenuReadyToggle"
        android:textOff="@string/ready"
        android:textOn="@string/ready"
        android:minWidth="100dp"
        android:minHeight="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roomMenuLeaveBtn"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/roomMenuPlayerListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="60dp"
        android:paddingTop="30dp"
        android:dividerHeight="4dp"
        android:minHeight="63dp" />

    <TextView
        android:text="@string/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/roomMenuTitleName"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
